changes to ppt dashboard and code comments

--- a/11.borrowerdocsub.html
+++ b/11.borrowerdocsub.html
@@ -167,7 +167,7 @@
             alert('Automation is done to agree/reject loan.');
             
             // Redirect to the next page
-            window.location.href = '12.borroweragreementsigning.html'; // Replace '12.borroweragreementsigning.html' with the URL of my next HTML page
+            window.location.href = '12.borroweragreementsigning.html';
         }
     </script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
