--- a/7.typesoflending.html
+++ b/7.typesoflending.html
@@ -47,7 +47,7 @@
             text-decoration: none;
         }
         .register-btn {
-            background-color: #81039B; /* Updated color */
+            background-color: #81039B;
             color: white;
             border: none;
             padding: 0.5rem 1rem;
@@ -55,13 +55,13 @@
             cursor: pointer;
         }
         .content {
-            background-color: #490B3D; /* Updated color */
+            background-color: #490B3D;
             border-radius: 10px;
             padding: 20px;
             margin: 20px 0;
         }
         .start-btn {
-            background-color: #81039B; /* Updated color */
+            background-color: #81039B;
             color: white;
             padding: 15px 30px;
             border-radius: 20px;
